Hide title on small screens. Stop overriding container width on posters view. Add bottom margin to file input. Decrease font weight of headings

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,7 +6,7 @@ body {
 }
 
 h1,h2,h3,h4,h5,h6 {
-  font-weight: 400;
+  font-weight: 300;
 }
 
 .hoverable {
