--- a/src/styles/serviceRequest.scss
+++ b/src/styles/serviceRequest.scss
@@ -1,3 +1,7 @@
+.file-field {
+  margin-bottom: 16px;
+}
+
 .file-path-wrapper {
   textarea {
     margin-top: 0 !important;
